codes/Parser/TParser.g4
parser grammar TParser;
options { tokenVocab=TLexer; }

circuit : (element)* END EOF;
element : capacitor
        | resistor
        | inductor
        | voltagesource
        | currentsource;

voltagesource : (VOLTAGE_SOURCE_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ DC WHITESPACE+ COMPONENT_VALUE+ WHITESPACE* PARAMS* WHITESPACE* NEWLINE);

currentsource : (CURRENT_SOURCE_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ DC WHITESPACE+ COMPONENT_VALUE+ WHITESPACE* PARAMS* WHITESPACE* NEWLINE);

resistor : (RESISTOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ COMPONENT_VALUE+ WHITESPACE* PARAMS* WHITESPACE* NEWLINE);

capacitor : (CAPACITOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ COMPONENT_VALUE+ WHITESPACE* PARAMS* WHITESPACE* NEWLINE);

inductor :  (INDUCTOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ COMPONENT_VALUE+ WHITESPACE* PARAMS* WHITESPACE* NEWLINE);

// mutual_inductor : MUTUAL_INDUCTOR_NAME WHITESPACE INDUCTOR_NAME WHITESPACE  INDUCTOR_NAME WHITESPACE COMPONENT_VALUE;

// diod :  (RESISTOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ TEXT+ WHITESPACE+ PARAMS* WHITESPACE* NEWLINE) |
//         (RESISTOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE+ TEXT* WHITESPACE* NEWLINE) |
//         (RESISTOR_NAME WHITESPACE+ TEXT WHITESPACE+ TEXT WHITESPACE* NEWLINE);
