codes/solver/parser/generated/TParser.cpp

// Generated from TParser.g4 by ANTLR 4.10


#include "TParserListener.h"
#include "TParserVisitor.h"

#include "TParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct TParserStaticData final {
  TParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TParserStaticData(const TParserStaticData&) = delete;
  TParserStaticData(TParserStaticData&&) = delete;
  TParserStaticData& operator=(const TParserStaticData&) = delete;
  TParserStaticData& operator=(TParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag tparserParserOnceFlag;
TParserStaticData *tparserParserStaticData = nullptr;

void tparserParserInitialize() {
  assert(tparserParserStaticData == nullptr);
  auto staticData = std::make_unique<TParserStaticData>(
    std::vector<std::string>{
      "circuit", "element", "voltagesource", "currentsource", "resistor", 
      "capacitor", "inductor"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "'DC'", "", "", "", "'.end'"
    },
    std::vector<std::string>{
      "", "COMMENT", "WHITESPACE", "NEWLINE", "RESISTOR_NAME", "CAPACITOR_NAME", 
      "INDUCTOR_NAME", "VOLTAGE_SOURCE_NAME", "CURRENT_SOURCE_NAME", "DC", 
      "COMPONENT_VALUE", "NUMERIC_VALUE", "NUMBERS", "END", "PARAMS", "TEXT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tparserParserStaticData = staticData.release();
}

}

TParser::TParser(TokenStream *input) : TParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TParser::TParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tparserParserStaticData->atn, tparserParserStaticData->decisionToDFA, tparserParserStaticData->sharedContextCache, options);
}

TParser::~TParser() {
  delete _interpreter;
}

const atn::ATN& TParser::getATN() const {
  return *tparserParserStaticData->atn;
}

std::string TParser::getGrammarFileName() const {
  return "TParser.g4";
}

const std::vector<std::string>& TParser::getRuleNames() const {
  return tparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& TParser::getVocabulary() const {
  return tparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TParser::getSerializedATN() const {
  return tparserParserStaticData->serializedATN;
}


//----------------- CircuitContext ------------------------------------------------------------------

TParser::CircuitContext::CircuitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::CircuitContext::END() {
  return getToken(TParser::END, 0);
}

tree::TerminalNode* TParser::CircuitContext::EOF() {
  return getToken(TParser::EOF, 0);
}

std::vector<TParser::ElementContext *> TParser::CircuitContext::element() {
  return getRuleContexts<TParser::ElementContext>();
}

TParser::ElementContext* TParser::CircuitContext::element(size_t i) {
  return getRuleContext<TParser::ElementContext>(i);
}


size_t TParser::CircuitContext::getRuleIndex() const {
  return TParser::RuleCircuit;
}

void TParser::CircuitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCircuit(this);
}

void TParser::CircuitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCircuit(this);
}


std::any TParser::CircuitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitCircuit(this);
  else
    return visitor->visitChildren(this);
}

TParser::CircuitContext* TParser::circuit() {
  CircuitContext *_localctx = _tracker.createInstance<CircuitContext>(_ctx, getState());
  enterRule(_localctx, 0, TParser::RuleCircuit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(17);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TParser::RESISTOR_NAME)
      | (1ULL << TParser::CAPACITOR_NAME)
      | (1ULL << TParser::INDUCTOR_NAME)
      | (1ULL << TParser::VOLTAGE_SOURCE_NAME)
      | (1ULL << TParser::CURRENT_SOURCE_NAME))) != 0)) {
      setState(14);
      element();
      setState(19);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(20);
    match(TParser::END);
    setState(21);
    match(TParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

TParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::CapacitorContext* TParser::ElementContext::capacitor() {
  return getRuleContext<TParser::CapacitorContext>(0);
}

TParser::ResistorContext* TParser::ElementContext::resistor() {
  return getRuleContext<TParser::ResistorContext>(0);
}

TParser::InductorContext* TParser::ElementContext::inductor() {
  return getRuleContext<TParser::InductorContext>(0);
}

TParser::VoltagesourceContext* TParser::ElementContext::voltagesource() {
  return getRuleContext<TParser::VoltagesourceContext>(0);
}

TParser::CurrentsourceContext* TParser::ElementContext::currentsource() {
  return getRuleContext<TParser::CurrentsourceContext>(0);
}


size_t TParser::ElementContext::getRuleIndex() const {
  return TParser::RuleElement;
}

void TParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void TParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


std::any TParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

TParser::ElementContext* TParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 2, TParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(28);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::CAPACITOR_NAME: {
        enterOuterAlt(_localctx, 1);
        setState(23);
        capacitor();
        break;
      }

      case TParser::RESISTOR_NAME: {
        enterOuterAlt(_localctx, 2);
        setState(24);
        resistor();
        break;
      }

      case TParser::INDUCTOR_NAME: {
        enterOuterAlt(_localctx, 3);
        setState(25);
        inductor();
        break;
      }

      case TParser::VOLTAGE_SOURCE_NAME: {
        enterOuterAlt(_localctx, 4);
        setState(26);
        voltagesource();
        break;
      }

      case TParser::CURRENT_SOURCE_NAME: {
        enterOuterAlt(_localctx, 5);
        setState(27);
        currentsource();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VoltagesourceContext ------------------------------------------------------------------

TParser::VoltagesourceContext::VoltagesourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::VoltagesourceContext::VOLTAGE_SOURCE_NAME() {
  return getToken(TParser::VOLTAGE_SOURCE_NAME, 0);
}

std::vector<tree::TerminalNode *> TParser::VoltagesourceContext::TEXT() {
  return getTokens(TParser::TEXT);
}

tree::TerminalNode* TParser::VoltagesourceContext::TEXT(size_t i) {
  return getToken(TParser::TEXT, i);
}

tree::TerminalNode* TParser::VoltagesourceContext::DC() {
  return getToken(TParser::DC, 0);
}

tree::TerminalNode* TParser::VoltagesourceContext::NEWLINE() {
  return getToken(TParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> TParser::VoltagesourceContext::WHITESPACE() {
  return getTokens(TParser::WHITESPACE);
}

tree::TerminalNode* TParser::VoltagesourceContext::WHITESPACE(size_t i) {
  return getToken(TParser::WHITESPACE, i);
}

std::vector<tree::TerminalNode *> TParser::VoltagesourceContext::COMPONENT_VALUE() {
  return getTokens(TParser::COMPONENT_VALUE);
}

tree::TerminalNode* TParser::VoltagesourceContext::COMPONENT_VALUE(size_t i) {
  return getToken(TParser::COMPONENT_VALUE, i);
}

std::vector<tree::TerminalNode *> TParser::VoltagesourceContext::PARAMS() {
  return getTokens(TParser::PARAMS);
}

tree::TerminalNode* TParser::VoltagesourceContext::PARAMS(size_t i) {
  return getToken(TParser::PARAMS, i);
}


size_t TParser::VoltagesourceContext::getRuleIndex() const {
  return TParser::RuleVoltagesource;
}

void TParser::VoltagesourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVoltagesource(this);
}

void TParser::VoltagesourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVoltagesource(this);
}


std::any TParser::VoltagesourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitVoltagesource(this);
  else
    return visitor->visitChildren(this);
}

TParser::VoltagesourceContext* TParser::voltagesource() {
  VoltagesourceContext *_localctx = _tracker.createInstance<VoltagesourceContext>(_ctx, getState());
  enterRule(_localctx, 4, TParser::RuleVoltagesource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(TParser::VOLTAGE_SOURCE_NAME);
    setState(32); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(31);
      match(TParser::WHITESPACE);
      setState(34); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(36);
    match(TParser::TEXT);
    setState(38); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(37);
      match(TParser::WHITESPACE);
      setState(40); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(42);
    match(TParser::TEXT);
    setState(44); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(43);
      match(TParser::WHITESPACE);
      setState(46); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(48);
    match(TParser::DC);
    setState(50); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(49);
      match(TParser::WHITESPACE);
      setState(52); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(55); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(54);
      match(TParser::COMPONENT_VALUE);
      setState(57); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::COMPONENT_VALUE);
    setState(62);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(59);
        match(TParser::WHITESPACE); 
      }
      setState(64);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::PARAMS) {
      setState(65);
      match(TParser::PARAMS);
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::WHITESPACE) {
      setState(71);
      match(TParser::WHITESPACE);
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    match(TParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CurrentsourceContext ------------------------------------------------------------------

TParser::CurrentsourceContext::CurrentsourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::CurrentsourceContext::CURRENT_SOURCE_NAME() {
  return getToken(TParser::CURRENT_SOURCE_NAME, 0);
}

std::vector<tree::TerminalNode *> TParser::CurrentsourceContext::TEXT() {
  return getTokens(TParser::TEXT);
}

tree::TerminalNode* TParser::CurrentsourceContext::TEXT(size_t i) {
  return getToken(TParser::TEXT, i);
}

tree::TerminalNode* TParser::CurrentsourceContext::DC() {
  return getToken(TParser::DC, 0);
}

tree::TerminalNode* TParser::CurrentsourceContext::NEWLINE() {
  return getToken(TParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> TParser::CurrentsourceContext::WHITESPACE() {
  return getTokens(TParser::WHITESPACE);
}

tree::TerminalNode* TParser::CurrentsourceContext::WHITESPACE(size_t i) {
  return getToken(TParser::WHITESPACE, i);
}

std::vector<tree::TerminalNode *> TParser::CurrentsourceContext::COMPONENT_VALUE() {
  return getTokens(TParser::COMPONENT_VALUE);
}

tree::TerminalNode* TParser::CurrentsourceContext::COMPONENT_VALUE(size_t i) {
  return getToken(TParser::COMPONENT_VALUE, i);
}

std::vector<tree::TerminalNode *> TParser::CurrentsourceContext::PARAMS() {
  return getTokens(TParser::PARAMS);
}

tree::TerminalNode* TParser::CurrentsourceContext::PARAMS(size_t i) {
  return getToken(TParser::PARAMS, i);
}


size_t TParser::CurrentsourceContext::getRuleIndex() const {
  return TParser::RuleCurrentsource;
}

void TParser::CurrentsourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCurrentsource(this);
}

void TParser::CurrentsourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCurrentsource(this);
}


std::any TParser::CurrentsourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitCurrentsource(this);
  else
    return visitor->visitChildren(this);
}

TParser::CurrentsourceContext* TParser::currentsource() {
  CurrentsourceContext *_localctx = _tracker.createInstance<CurrentsourceContext>(_ctx, getState());
  enterRule(_localctx, 6, TParser::RuleCurrentsource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(TParser::CURRENT_SOURCE_NAME);
    setState(81); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      match(TParser::WHITESPACE);
      setState(83); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(85);
    match(TParser::TEXT);
    setState(87); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(86);
      match(TParser::WHITESPACE);
      setState(89); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(91);
    match(TParser::TEXT);
    setState(93); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(92);
      match(TParser::WHITESPACE);
      setState(95); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(97);
    match(TParser::DC);
    setState(99); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(98);
      match(TParser::WHITESPACE);
      setState(101); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(104); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(103);
      match(TParser::COMPONENT_VALUE);
      setState(106); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::COMPONENT_VALUE);
    setState(111);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(108);
        match(TParser::WHITESPACE); 
      }
      setState(113);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    }
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::PARAMS) {
      setState(114);
      match(TParser::PARAMS);
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(123);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::WHITESPACE) {
      setState(120);
      match(TParser::WHITESPACE);
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(126);
    match(TParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ResistorContext ------------------------------------------------------------------

TParser::ResistorContext::ResistorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::ResistorContext::RESISTOR_NAME() {
  return getToken(TParser::RESISTOR_NAME, 0);
}

std::vector<tree::TerminalNode *> TParser::ResistorContext::TEXT() {
  return getTokens(TParser::TEXT);
}

tree::TerminalNode* TParser::ResistorContext::TEXT(size_t i) {
  return getToken(TParser::TEXT, i);
}

tree::TerminalNode* TParser::ResistorContext::NEWLINE() {
  return getToken(TParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> TParser::ResistorContext::WHITESPACE() {
  return getTokens(TParser::WHITESPACE);
}

tree::TerminalNode* TParser::ResistorContext::WHITESPACE(size_t i) {
  return getToken(TParser::WHITESPACE, i);
}

std::vector<tree::TerminalNode *> TParser::ResistorContext::COMPONENT_VALUE() {
  return getTokens(TParser::COMPONENT_VALUE);
}

tree::TerminalNode* TParser::ResistorContext::COMPONENT_VALUE(size_t i) {
  return getToken(TParser::COMPONENT_VALUE, i);
}

std::vector<tree::TerminalNode *> TParser::ResistorContext::PARAMS() {
  return getTokens(TParser::PARAMS);
}

tree::TerminalNode* TParser::ResistorContext::PARAMS(size_t i) {
  return getToken(TParser::PARAMS, i);
}


size_t TParser::ResistorContext::getRuleIndex() const {
  return TParser::RuleResistor;
}

void TParser::ResistorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterResistor(this);
}

void TParser::ResistorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitResistor(this);
}


std::any TParser::ResistorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitResistor(this);
  else
    return visitor->visitChildren(this);
}

TParser::ResistorContext* TParser::resistor() {
  ResistorContext *_localctx = _tracker.createInstance<ResistorContext>(_ctx, getState());
  enterRule(_localctx, 8, TParser::RuleResistor);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(TParser::RESISTOR_NAME);
    setState(130); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(129);
      match(TParser::WHITESPACE);
      setState(132); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(134);
    match(TParser::TEXT);
    setState(136); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(135);
      match(TParser::WHITESPACE);
      setState(138); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(140);
    match(TParser::TEXT);
    setState(142); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(141);
      match(TParser::WHITESPACE);
      setState(144); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(147); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(146);
      match(TParser::COMPONENT_VALUE);
      setState(149); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::COMPONENT_VALUE);
    setState(154);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(151);
        match(TParser::WHITESPACE); 
      }
      setState(156);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx);
    }
    setState(160);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::PARAMS) {
      setState(157);
      match(TParser::PARAMS);
      setState(162);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(166);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::WHITESPACE) {
      setState(163);
      match(TParser::WHITESPACE);
      setState(168);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(169);
    match(TParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CapacitorContext ------------------------------------------------------------------

TParser::CapacitorContext::CapacitorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::CapacitorContext::CAPACITOR_NAME() {
  return getToken(TParser::CAPACITOR_NAME, 0);
}

std::vector<tree::TerminalNode *> TParser::CapacitorContext::TEXT() {
  return getTokens(TParser::TEXT);
}

tree::TerminalNode* TParser::CapacitorContext::TEXT(size_t i) {
  return getToken(TParser::TEXT, i);
}

tree::TerminalNode* TParser::CapacitorContext::NEWLINE() {
  return getToken(TParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> TParser::CapacitorContext::WHITESPACE() {
  return getTokens(TParser::WHITESPACE);
}

tree::TerminalNode* TParser::CapacitorContext::WHITESPACE(size_t i) {
  return getToken(TParser::WHITESPACE, i);
}

std::vector<tree::TerminalNode *> TParser::CapacitorContext::COMPONENT_VALUE() {
  return getTokens(TParser::COMPONENT_VALUE);
}

tree::TerminalNode* TParser::CapacitorContext::COMPONENT_VALUE(size_t i) {
  return getToken(TParser::COMPONENT_VALUE, i);
}

std::vector<tree::TerminalNode *> TParser::CapacitorContext::PARAMS() {
  return getTokens(TParser::PARAMS);
}

tree::TerminalNode* TParser::CapacitorContext::PARAMS(size_t i) {
  return getToken(TParser::PARAMS, i);
}


size_t TParser::CapacitorContext::getRuleIndex() const {
  return TParser::RuleCapacitor;
}

void TParser::CapacitorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCapacitor(this);
}

void TParser::CapacitorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCapacitor(this);
}


std::any TParser::CapacitorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitCapacitor(this);
  else
    return visitor->visitChildren(this);
}

TParser::CapacitorContext* TParser::capacitor() {
  CapacitorContext *_localctx = _tracker.createInstance<CapacitorContext>(_ctx, getState());
  enterRule(_localctx, 10, TParser::RuleCapacitor);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(171);
    match(TParser::CAPACITOR_NAME);
    setState(173); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(172);
      match(TParser::WHITESPACE);
      setState(175); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(177);
    match(TParser::TEXT);
    setState(179); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(178);
      match(TParser::WHITESPACE);
      setState(181); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(183);
    match(TParser::TEXT);
    setState(185); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(184);
      match(TParser::WHITESPACE);
      setState(187); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::WHITESPACE);
    setState(190); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(189);
      match(TParser::COMPONENT_VALUE);
      setState(192); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == TParser::COMPONENT_VALUE);
    setState(197);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 29, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(194);
        match(TParser::WHITESPACE); 
      }
      setState(199);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 29, _ctx);
    }
    setState(203);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::PARAMS) {
      setState(200);
      match(TParser::PARAMS);
      setState(205);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(209);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::WHITESPACE) {
      setState(206);
      match(TParser::WHITESPACE);
      setState(211);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(212);
    match(TParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InductorContext ------------------------------------------------------------------
